change file name inside html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMDb</title>
-    <link rel="stylesheet" href="imdb_style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
     <footer>
         <p>Made by <a href="https://github.com/vishant002" target="_blank">Vishant Agrawal</a></p>
     </footer>
-    <script src="imdb_script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
